// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`experimentSettingsReducer Adds new object properly 1`] = `
Object {
  "meta": Object {},
  "processing": Object {
    "configureEmbedding": Object {
      "clusteringSettings": Object {
        "method": "louvain",
        "methodSettings": Object {
          "louvain": Object {
            "resolution": 0.5,
          },
        },
      },
      "embeddingSettings": Object {
        "method": "newMethod",
        "methodSettings": Object {
          "tsne": Object {
            "learningRate": 200,
            "perplexity": 30,
          },
          "umap": Object {
            "distanceMetric": "euclidean",
            "minimumDistance": 0.1,
          },
        },
        "newProperty": Object {
          "name": "a",
          "value": "b",
        },
      },
    },
  },
  "root": Object {
    "experimentId": null,
    "experimentName": null,
  },
}
`;

exports[`experimentSettingsReducer Adds new value properly 1`] = `
Object {
  "meta": Object {},
  "processing": Object {
    "configureEmbedding": Object {
      "clusteringSettings": Object {
        "method": "louvain",
        "methodSettings": Object {
          "louvain": Object {
            "resolution": 0.5,
          },
        },
      },
      "embeddingSettings": Object {
        "method": "newMethod",
        "methodSettings": Object {
          "tsne": Object {
            "learningRate": 200,
            "perplexity": 30,
          },
          "umap": Object {
            "distanceMetric": "euclidean",
            "minimumDistance": 0.1,
          },
        },
        "newProperty": "property",
      },
    },
  },
  "root": Object {
    "experimentId": null,
    "experimentName": null,
  },
}
`;

exports[`experimentSettingsReducer Updates existing value properly 1`] = `
Object {
  "meta": Object {},
  "processing": Object {
    "configureEmbedding": Object {
      "clusteringSettings": Object {
        "method": "louvain",
        "methodSettings": Object {
          "louvain": Object {
            "resolution": 0.5,
          },
        },
      },
      "embeddingSettings": Object {
        "method": "newMethod",
        "methodSettings": Object {
          "tsne": Object {
            "learningRate": 200,
            "perplexity": 30,
          },
          "umap": Object {
            "distanceMetric": "euclidean",
            "minimumDistance": 0.1,
          },
        },
      },
    },
  },
  "root": Object {
    "experimentId": null,
    "experimentName": null,
  },
}
`;
